--- a/public/widget/style.css
+++ b/public/widget/style.css
@@ -376,7 +376,7 @@ body {
     margin: 0 auto;
     border: 1px solid #D7DDEE; 
     border-radius: 10px;
-  }
+  } 
   .billing-info-main{
     max-width: 1285px;
     margin: 30px auto 10px;
@@ -386,7 +386,7 @@ body {
     padding: 0 70px 0;
   }
   .checkout-main h4{
-    color: #0080FF;
+    color: #CACACA;
     font-size: 30px;
     font-weight: 600;
     margin-top: 30px;
@@ -582,6 +582,9 @@ body {
     font-size: 17px;
     font-weight: 300;
   }
+  .plan-perks p {
+    margin-bottom: 0;
+  }
   .plan-perks span{
     display: inline-flex;
     align-items: center;
@@ -641,6 +644,13 @@ body {
   }
   .plans-tab-main{
     display: none;
+  }
+  #countdown {
+    font-size: 48px;
+    font-weight: bold;
+    color: #0080FF;
+    text-align: center;
+    margin-top: 20px;
   }
 
   /* Responsive  */
@@ -749,7 +759,10 @@ body {
    }
    .plan-perks { 
     font-size: 14px; 
-  }
+   }
+   .plan-perks p{
+    margin-bottom: 0;
+   }
   .plan-perks span { 
     width: 40px;
   }
@@ -1015,26 +1028,29 @@ body {
     margin-top: 30px;
   }
   .profile-card { 
-    width: 52px; 
+    width: 100%; 
   }
   .profile-img { 
     width: 52px;
-    height: 52px;
-    margin-bottom: 2px;
+    height: 52px; 
+    margin: 0 auto 2px;
   }
   .profile-img .checkmark svg{
     width: 16px;
   }
   .profile-img img {
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
   }
   .profile-img .checkmark { 
     top: -15px;
     right: 20px;
   }
-  .profile-option .profile-card span {
+  .profile-option .profile-card .profile-label {
     font-size: 12px;
+    line-height: 1.3;
+    display: inline-block;
+    margin-top: 5px; 
   }
   .btn-main {
     margin-top: 25px;
@@ -1096,6 +1112,7 @@ body {
   .custom-radio .form-check-input { 
     width: 15px;
     height: 15px; 
+    margin-top: 5px;
   }
   .custom-radio .form-check-label {
     margin-left: 0px; 
@@ -1130,7 +1147,9 @@ body {
     margin-bottom: 12px !important;
   }
   .checkout-main h4 { 
-    font-size: 15px; 
+    font-size: 13px; 
+    margin-top: 15px;
+    margin-bottom: 13px;
   }
   .checkout-detail span { 
     font-size: 22px; 
@@ -1211,6 +1230,11 @@ body {
   }
   .sign-agreement h3 {
     font-size: 18px; 
+    margin-bottom: 25px;
+  }
+  #countdown {
+    font-size: 30px; 
+    margin-top: 0;
   }
   .sign-agreement p {
     font-size: 15px; 
